--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
+
+    compile group: 'io.vavr', name: 'vavr', version: '0.10.0'
 }
 
 // In this section you declare where to find the dependencies of your project
