--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,24 @@ plugins {
     id 'application'
 }
 
-// Define the main class for the application
-mainClassName = 'App'
+
+task fatJar(type: Jar) {
+    zip64 = true
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': 1.3,
+                'Main-Class': 'com.stefanik36.agds.model.AgdsTest'
+    }
+    from sourceSets.test.output
+
+    //collect all dependencies
+    from { configurations.testRuntime.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+mainClassName = 'test.java.com.stefanik36.agds.model.AgdsTest'
+
+
+
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
